--- a/books/templates/books/home_page.html
+++ b/books/templates/books/home_page.html
@@ -59,7 +59,7 @@
     </header>
   
     <div class="main-content">
-      <a href="#" class="btn">Listar Livros / Catalogar</a>
+      <a href="{% url 'get_books' %}" class="btn">Listar Livros / Catalogar</a>
     </div>
   </div>
 {% endblock content %}
