Criação da class view delete e página de confirmação

--- a/books/templates/base.html
+++ b/books/templates/base.html
@@ -45,7 +45,7 @@
 <body>
     <nav>
         <a href="{% url 'home_page' %}">Página Inicial</a>
-        <a href="{% url 'post_books' %}">Adicionar Livro</a>
+        <a href="{% url 'post_book' %}">Adicionar Livro</a>
     </nav>
     <main>{% block content %} {% endblock content %}</main>
 </body>
