--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -99,7 +99,11 @@
             <td>{{ book.page_numbers|default:"Desconhecido" }}</td>
             <td>{% if book.read %}Lido{% else %}Não Lido{% endif %}</td>
             <td>
-                <a href="#" class="actions lido" >Lido</a>
+                {% if not book.read %}
+                <a href="{% url 'read_book' pk=book.pk %}" class="actions lido">Marcar como Lido</a>
+                {% else %}
+                <span class="actions lido" style="background-color: #28a745; cursor: not-allowed;">Lido</span>
+                {% endif %}
                 <a href="{% url 'put_book' pk=book.pk %}" class="actions editar">Editar</a>
                 <a href="{% url 'delete_book' pk=book.pk %}" class="actions deletar">Deletar</a>
             </td>
